# claw-jijin-dogami

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  DEVELOPMENT-FLOW.md
src/claw_jijin_dogami.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/claw_jijin_dogami/api/: app.py
src/claw_jijin_dogami/api/routes/: capabilities.py  event.py  fund.py  health.py  integration.py  jobs.py  portfolio.py  providers.py  recommendation.py  replay.py  sync.py
src/claw_jijin_dogami/models/: __init__.py  capabilities.py  event.py  fund.py  integration.py  jobs.py  portfolio.py  providers.py  recommendation.py  replay.py  sync.py
src/claw_jijin_dogami/providers/: __init__.py  akshare.py  base.py  efinance.py  registry.py  xalpha.py
src/claw_jijin_dogami/services/: __init__.py  capabilities.py  event.py  fund.py  integration.py  jobs.py  portfolio.py  providers.py  recommendation.py  replay.py  sync.py
tests/: test_akshare_provider.py  test_capabilities.py  test_event_and_jobs.py  test_fund_search.py  test_health.py  test_integration.py  test_portfolio.py  test_provider_adapters.py  test_providers.py  test_recommendation.py  test_replay.py  test_sync.py
